--- a/index.html
+++ b/index.html
@@ -188,13 +188,13 @@
 				</div>
 				<div class="col-lg-8">
 					<span class="subheading d-block mb-4">Upcoming events</span>
-					<h2 class="text-black">Silver Jubilee anniversary, 10th November</h2>
+					<h2 class="text-black">Pastor's Day, 9th March 2025</h2>
 					<p class="sermon-meta mb-4"><strong id="event-status">Countdown: Days from now</strong></p>
 	
 					<div class="row">
 						<div class="col-6 col-sm-6 col-md-6 col-lg-3 text-left">
 							<div class="counter">
-								<span class="number d-block" id="days">0</span>
+								<span class="number d-block" id="days">9</span>
 								<span class="caption">Days</span>
 							</div>
 						</div>
