--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="css/style.css">
 
-	<title>AIC-NEEMA &mdash; </title>
+	<title>AIC Neema Wilson Airport</title>
 </head>
 <body >
 
