--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<meta name="Hacker Emmanuel" content="AIC NEEMA">
-	<link rel="shortcut icon" href="images/aiclogo-removebg-preview.png">
+	<link rel="shortcut icon" href="images/Favicon.png">
 
 	<meta name="description" content="" />
 	<meta name="keywords" content="bootstrap, bootstrap5" />
@@ -34,7 +34,6 @@
 	<title>AIC Neema Wilson Airport</title>
 </head>
 <body >
-
 	<div class="site-mobile-menu site-navbar-target">
 		<div class="site-mobile-menu-header">
 			<div class="site-mobile-menu-close">
@@ -63,8 +62,6 @@
 					<li class="cta-button"><a href="contact.html">Request a prayer</a></li>
 				</ul>
 
-				
-
 				<a href="#" class="burger ms-auto float-end site-menu-toggle js-menu-toggle d-inline-block d-lg-none light" data-toggle="collapse" data-target="#main-navbar">
 					<span></span>
 				</a>
@@ -74,16 +71,16 @@
 		</div>
 	</nav>
 
-	<div class="hero overlay" style="background-image: url('images/download.jpeg');">
+	<div class="hero overlay" style="background-image: url('images/background.jpg');">
 		<div class="container">
 			<div class="row align-items-center justify-content-between">
 				<div class="col-lg-5 me-auto text-start pe-lg-5">
 					<div class="intro-text">
 						<div class="mb-4">
-							<h1 data-aos="fade-left" class="hero-heading">Welcome</h1>
+							<h1 data-aos="fade-left" class="hero-heading">Welcome!</h1>
 						</div>
 						<div>
-							<p class="mb-5 opacity-5" data-aos="fade-left" data-aos-delay="200">
+							<p class="mb-5" data-aos="fade-left" data-aos-delay="200">
 								Welcome to AIC-NEEMA-Wilson-Airport. We love visitors and we would be glad to have you as our visitor. Follow below the order of our services
 							</p>
 							<p data-aos="fade-left" data-aos-delay="300">
@@ -103,7 +100,6 @@
 						<span class="icon"><span class="icon-play"></span></span>
 						<img src="images/CMF.jpg" style="height: 400px; width: 550px;" alt="CMF" class="img-fluid rounded">
 						<div class="carousel-caption d-none d-md-block">
-							<h5>CMF</h5>
 							<p>Christian Men Fellowship</p>
 						</div>
 					</a>
@@ -114,7 +110,6 @@
 						<span class="icon"><span class="icon-play"></span></span>
 						<img src="images/CWF.jpg" style="height: 400px; width: 550px;" alt="CWF" class="img-fluid rounded">
 						<div class="carousel-caption d-none d-md-block">
-							<h5>CWF</h5>
 							<p>Christian Women Fellowship</p>
 						</div>
 					</a>
@@ -125,7 +120,6 @@
 						<span class="icon"><span class="icon-play"></span></span>
 						<img src="images/CYA.jpg" style="height: 400px; width: 550px;" alt="CYA" class="img-fluid rounded">
 						<div class="carousel-caption d-none d-md-block">
-							<h5>CYA</h5>
 							<p>Christian Youth In Action</p>
 						</div>
 					</a>
@@ -134,10 +128,9 @@
 				<div class="carousel-item">
 					<a href="https://www.youtube.com/watch?v=SjXLlr-1GbQ&t=197s&pp=ygUYYWljIG5lZW1hIHdpbHNvbiBhaXJwb3J0" class="video-bg glightbox">
 						<span class="icon"><span class="icon-play"></span></span>
-						<img src="images/battalion.jpg" style="height: 400px; width: 550px;" alt="Battalion" class="img-fluid rounded">
+						<img src="images/Choir.jpg" style="height: 400px; width: 550px;" alt="CYA" class="img-fluid rounded">
 						<div class="carousel-caption d-none d-md-block">
-							<h5>Battalion</h5>
-							<p>Young Battalion Group</p>
+							<p>AIC Neema Wilson Airport - Choir</p>
 						</div>
 					</a>
 				</div>
@@ -145,10 +138,9 @@
 				<div class="carousel-item">
 					<a href="https://www.youtube.com/watch?v=SjXLlr-1GbQ&t=197s&pp=ygUYYWljIG5lZW1hIHdpbHNvbiBhaXJwb3J0" class="video-bg glightbox">
 						<span class="icon"><span class="icon-play"></span></span>
-						<img src="images/Cadet.jpg" style="height: 400px; width: 550px;" alt="Cadet" class="img-fluid rounded">
+						<img src="images/battalion.jpg" style="height: 400px; width: 550px;" alt="Battalion" class="img-fluid rounded">
 						<div class="carousel-caption d-none d-md-block">
-							<h5>Cadet</h5>
-							<p>Young Cadets Program</p>
+							<p>Young Battalion Group</p>
 						</div>
 					</a>
 				</div>
@@ -156,9 +148,18 @@
 				<div class="carousel-item">
 					<a href="https://www.youtube.com/watch?v=SjXLlr-1GbQ&t=197s&pp=ygUYYWljIG5lZW1hIHdpbHNvbiBhaXJwb3J0" class="video-bg glightbox">
 						<span class="icon"><span class="icon-play"></span></span>
+						<img src="images/Cadet.jpg" style="height: 400px; width: 550px;" alt="Cadet" class="img-fluid rounded">
+						<div class="carousel-caption d-none d-md-block">
+							<p>Young Cadets Program</p>
+						</div>
+					</a>
+				</div>
+				<!-- Seventh Image Slide -->
+				<div class="carousel-item">
+					<a href="https://www.youtube.com/watch?v=SjXLlr-1GbQ&t=197s&pp=ygUYYWljIG5lZW1hIHdpbHNvbiBhaXJwb3J0" class="video-bg glightbox">
+						<span class="icon"><span class="icon-play"></span></span>
 						<img src="images/StarCadet.jpg" style="height: 400px; width: 550px;" alt="StarCadet" class="img-fluid rounded">
 						<div class="carousel-caption d-none d-md-block">
-							<h5>Star Cadet</h5>
 							<p>Young Stars Program</p>
 						</div>
 					</a>
@@ -183,12 +184,12 @@
 	<div class="section upcoming-sermon js-countdown py-5">
 		<div class="container">
 			<div class="row justify-content-between counter-wrap" id="clockdiv">
-				<div class="col-lg-3 mb-4 mb-lg-0">
-					<img src="images/cly2.jpg" style="height: 350px; width: 340px;" alt="Image" class="img-fluid rounded">
+				<div class="col-lg-4 mb-4 mb-lg-0">
+					<img src="images/P&W.jpg" style="height: 350px; width: 400px;" alt="Image" class="img-fluid rounded">
 				</div>
 				<div class="col-lg-8">
-					<span class="subheading d-block mb-4">Upcoming events</span>
-					<h2 class="text-black">Pastor's Day, 9th March 2025</h2>
+					<span class="subheading d-block mb-4">Upcoming event</span>
+					<h2 class="text-black">Monthly Kesha, Friday 25th April</h2>
 					<p class="sermon-meta mb-4"><strong id="event-status">Countdown: Days from now</strong></p>
 	
 					<div class="row">
@@ -242,33 +243,36 @@
 			<div class="row g-5">
 				<div class="col-12 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="0">
 					<div class="sermon-entry">
-						<a href="sermons.html"><img src="images/Esther.jpg" style="height: 350px; width: 303px;"  alt="Image" class="img-fluid mb-3 rounded"></a>
+						<a href="sermons.html"><img src="images/PstEsther.jpg" style="height: 360px; width: 400px;"  alt="Image" class="img-fluid mb-3 rounded"></a>
 						<div class="sermon-body">
 							<span class="date">6 Oct 2024 <span class="mx-2">&bullet;</span> By Pastor Esther Munyao </span>
 							<h3 class="mb-2"><a href="#">Prayer Gifts</a></h3>
-							<p class="mb-5">The sermon emphasizes on praying towards gifts that we have received through prayers. Example of these gifts are childrens. Currently, devil has been attacking these gifts...</p>
+							<p class="mb-5">The sermon emphasizes on praying towards gifts that we have received through prayers. 
+								Example of these gifts are children...</p>
 							<p><a href="ministry.html" class="btn btn-primary btn-sm">Read more</a></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-12 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
 					<div class="sermon-entry">
-						<a href="sermons.html"><img src="images/clyde.jpg" style="height: 360px; width: 300px;"  alt="Image" class="img-fluid mb-3 rounded"></a>
+						<a href="sermons.html"><img src="images/PstClyde.jpg" style="height: 360px; width: 400px;"  alt="Image" class="img-fluid mb-3 rounded"></a>
 						<div class="sermon-body">
 							<span class="date">29 Sep 2024 <span class="mx-2">&bullet;</span> By Pastor Clyde Otieno </span>
 							<h3 class="mb-2"><a href="#">God Has a Plan</a></h3>
-							<p class="mb-5"> <b>Romans 8:28-</b> And we know that all things work together for good to those who love God, to those who are the called according to His purpose.</p>
+							<p class="mb-5"> <b>Romans 8:28-</b> And we know that all things work together for good to those who love God, 
+								to those who are the called according to His purpose.</p>
 							<p><a href="ministry.html" class="btn btn-primary btn-sm">Read more</a></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-12 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
 					<div class="sermon-entry">
-						<a href="sermons.html"><img src="images/laboso.jpg" style="height: 298px; width: 335px;"  alt="Image" class="img-fluid mb-3 rounded"></a>
+						<a href="sermons.html"><img src="images/PstLaboso.jpg" style="height: 360px; width: 400px;"  alt="Image" class="img-fluid mb-3 rounded"></a>
 						<div class="sermon-body">
 							<span class="date">3 Sep 2024 <span class="mx-2">&bullet;</span> By Pastor Mary Laboso </span>
 							<h3 class="mb-2"><a href="#">Thanksgiving</a></h3>
-							<p class="mb-5"> <b>Philippians 1:1-11</b> Paul and Timothy, servants of Christ Jesus, To all God's holy people in Christ Jesus at Philippi, together with the overseers and deacons... </p>
+							<p class="mb-5"> <b>Philippians 1:1-11</b> Paul and Timothy, servants of Christ Jesus, To all God's holy people in 
+								Christ Jesus at Philippi, together with the overseers and deacons... </p>
 							<p><a href="ministry.html" class="btn btn-primary btn-sm">Read more</a></p>
 						</div>
 					</div>
