--- a/ministry.html
+++ b/ministry.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<meta name="Hacker Emmanuel/" content="AIC-NEEMA">
-	<link rel="shortcut icon" href="images/aiclogo-removebg-preview.png">
+	<link rel="shortcut icon" href="images/Favicon.png">
 
 	<meta name="description" content="" />
 	<meta name="keywords" content="bootstrap, bootstrap5" />
@@ -27,10 +27,9 @@
 	<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="css/style.css">
 
-	<title>AIC-NEEMA &mdash;</title>
+	<title>AIC Neema Wilson Airpor</title>
 </head>
 <body >
-
 	<div class="site-mobile-menu site-navbar-target">
 		<div class="site-mobile-menu-header">
 			<div class="site-mobile-menu-close">
@@ -44,15 +43,12 @@
 		<div class="container">
 			<div class="site-navigation">
 				<a href="index.html" class="logo m-0 float-left">
-					<img src="images/aiclogo-removebg-preview.png" alt="AIC-NEEMA" style="height: 70px;">
+					<img src="images/aiclogo-removebg-preview.png" alt="AIC-NEEMA" style="height: 50px;">
 				</a>
 
 				<ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu float-end">
 					<li><a href="index.html">Home</a></li>
-					<!-- <li class="has-children">
-						<a href="sermons.html">Sermons</a>
-						
-					</li> -->
+					
 					<li class="active"><a href="ministry.html">Ministries</a></li>
 					<li><a href="events.html">Events</a></li>
 					<li><a href="sermons.html">Sermon</a></li>
@@ -73,7 +69,7 @@
 		</div>
 	</nav>
 		
-		<div class="hero overlay" style="background-image: url('images/download.jpeg'); ">
+		<div class="hero overlay" style="background-image: url('images/background.jpg'); ">
 			<div class="container">
 				<div class="row align-items-center justify-content-between">
 					<div class="col-lg-5 me-auto text-start pe-lg-5">
@@ -82,7 +78,9 @@
 								<h1 data-aos="fade-left" class="hero-heading">Ministries</h1>
 							</div>
 							<div class="">
-								<p class="mb-5 opacity-5" data-aos="fade-left" data-aos-delay="200">We have various ministries in our church for instance the Christian Youth Association <b>(CYA)</b>, ChristianWomen Fellowship <b>(CWF)</b>, and Christian Men Fellowship <b>(CMF)</b>. We also have other organizations such as the <b>Battalion</b>, <b>Cadet</b>, <b>Star Cadet</b>, and <b>Music Ministry</b> among others, each has a different role in the church. Discover the possibility of these ministries with respect to growth in spirituality and fellowship below..</p>
+								<p class="mb-5" data-aos="fade-left" data-aos-delay="200">We have the following ministries in our church: Christian Youth in Action (CYA), 
+									Christian Women Fellowship (CWF), Christian Men Fellowship (CMF), Battalion, Cadet, Star Cadet, Music Ministry, 
+									and more each playing a unique role in spiritual growth and fellowship.</p>
 								<p data-aos="fade-left" data-aos-delay="300"><a href="sermons.html" class="btn btn-primary">Go to sermons</a></p>
 							</div>
 						</div>
@@ -98,7 +96,6 @@
 						<span class="icon"><span class="icon-play"></span></span>
 						<img src="images/CMF.jpg" style="height: 400px; width: 550px;" alt="CMF" class="img-fluid rounded">
 						<div class="carousel-caption d-none d-md-block">
-							<h5>CMF</h5>
 							<p>Christian Men Fellowship</p>
 						</div>
 					</a>
@@ -109,7 +106,6 @@
 						<span class="icon"><span class="icon-play"></span></span>
 						<img src="images/CWF.jpg" style="height: 400px; width: 550px;" alt="CWF" class="img-fluid rounded">
 						<div class="carousel-caption d-none d-md-block">
-							<h5>CWF</h5>
 							<p>Christian Women Fellowship</p>
 						</div>
 					</a>
@@ -120,7 +116,6 @@
 						<span class="icon"><span class="icon-play"></span></span>
 						<img src="images/CYA.jpg" style="height: 400px; width: 550px;" alt="CYA" class="img-fluid rounded">
 						<div class="carousel-caption d-none d-md-block">
-							<h5>CYA</h5>
 							<p>Christian Youth In Action</p>
 						</div>
 					</a>
@@ -129,10 +124,9 @@
 				<div class="carousel-item">
 					<a href="https://www.youtube.com/watch?v=SjXLlr-1GbQ&t=197s&pp=ygUYYWljIG5lZW1hIHdpbHNvbiBhaXJwb3J0" class="video-bg glightbox">
 						<span class="icon"><span class="icon-play"></span></span>
-						<img src="images/battalion.jpg" style="height: 400px; width: 550px;" alt="Battalion" class="img-fluid rounded">
+						<img src="images/Choir.jpg" style="height: 400px; width: 550px;" alt="CYA" class="img-fluid rounded">
 						<div class="carousel-caption d-none d-md-block">
-							<h5>Battalion</h5>
-							<p>Young Battalion Group</p>
+							<p>AIC Neema Wilson Airport - Choir</p>
 						</div>
 					</a>
 				</div>
@@ -140,10 +134,9 @@
 				<div class="carousel-item">
 					<a href="https://www.youtube.com/watch?v=SjXLlr-1GbQ&t=197s&pp=ygUYYWljIG5lZW1hIHdpbHNvbiBhaXJwb3J0" class="video-bg glightbox">
 						<span class="icon"><span class="icon-play"></span></span>
-						<img src="images/Cadet.jpg" style="height: 400px; width: 550px;" alt="Cadet" class="img-fluid rounded">
+						<img src="images/battalion.jpg" style="height: 400px; width: 550px;" alt="Battalion" class="img-fluid rounded">
 						<div class="carousel-caption d-none d-md-block">
-							<h5>Cadet</h5>
-							<p>Young Cadets Program</p>
+							<p>Young Battalion Group</p>
 						</div>
 					</a>
 				</div>
@@ -151,9 +144,18 @@
 				<div class="carousel-item">
 					<a href="https://www.youtube.com/watch?v=SjXLlr-1GbQ&t=197s&pp=ygUYYWljIG5lZW1hIHdpbHNvbiBhaXJwb3J0" class="video-bg glightbox">
 						<span class="icon"><span class="icon-play"></span></span>
+						<img src="images/Cadet.jpg" style="height: 400px; width: 550px;" alt="Cadet" class="img-fluid rounded">
+						<div class="carousel-caption d-none d-md-block">
+							<p>Young Cadets Program</p>
+						</div>
+					</a>
+				</div>
+				<!-- Seventh Image Slide -->
+				<div class="carousel-item">
+					<a href="https://www.youtube.com/watch?v=SjXLlr-1GbQ&t=197s&pp=ygUYYWljIG5lZW1hIHdpbHNvbiBhaXJwb3J0" class="video-bg glightbox">
+						<span class="icon"><span class="icon-play"></span></span>
 						<img src="images/StarCadet.jpg" style="height: 400px; width: 550px;" alt="StarCadet" class="img-fluid rounded">
 						<div class="carousel-caption d-none d-md-block">
-							<h5>Star Cadet</h5>
 							<p>Young Stars Program</p>
 						</div>
 					</a>
@@ -224,10 +226,10 @@
 				</div>
 				<div class="col-12 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
 					<div class="sermon-entry">
-						<a href="#"><img src="images/Cadet.jpg" style="height: 303; width: 303;"  alt="Image" class="img-fluid"></a>
+						<a href="#"><img src="images/Cadet2.jpg" style="height: 303; width: 303;"  alt="Image" class="img-fluid"></a>
 						<div class="sermon-body bg-white">
 							<h3 class="mb-2"><a href="https://drive.google.com/drive/folders/18t__oyp5prqWt7_nxZE6coJSR_cipbqr">Cadet</a></h3>
-							<p class="mb-3">Cadets in the African Inland Church (AIC) are part of a youth program aimed at instilling Christian values and service among young people, specifically for age groups starting from 3 years and above...</p>
+							<p class="mb-3">Cadets in the African Inland Church (AIC) are part of a youth program aimed at instilling Christian values and service among young people...</p>
 							<p><a href="https://drive.google.com/drive/folders/18t__oyp5prqWt7_nxZE6coJSR_cipbqr" class="btn btn-primary btn-sm">Read more</a></p>
 						</div>
 					</div>
@@ -250,20 +252,20 @@
 
 	<div class="section bg-secondary">
 		<div class="container">
-			<div class="row mb-5 justify-content-between align-items-center">
+			<div class="row mb-100 justify-content-between align-items-center">
 				<div class="col-lg-5" data-aos="fade-up">
-					<span class="subheading d-block mb-4 ">Why Us</span>
+					<span class="subheading d-block mb- ">Why Us ?</span>
 					<h2 class="heading text-white">God cares for you, and so do we.</h2>
 				</div>
-				<div class="col-lg-5 align-self-end text-white" data-aos="fade-up" data-aos-delay="100">
+				<div class="col-lg-5 align-self-end opac-white-5" data-aos="fade-up" data-aos-delay="100">
 					<p>We at AIC Neema Wilson Airport Church stand on the basis of Biblical authority. We offer hope through the salvation of Jesus Christ. Community is very important to us, and we strive to offer a supportive environment where fellowship is reality. We are committed to serving our brothers through evangelism, sharing God's love beyond our walls...</p>
 				</div>
 			</div>
 			<div class="row align-items-center g-5">
-				<div class="col-lg-6" data-aos="fade-up">
-					<!-- <a href="https://www.youtube.com/watch?v=mwtbEGNABWU" class="video-bg glightbox"> -->
+				<div class="col-lg-7" data-aos="fade-up">
+					<a href="https://www.tiktok.com/@aic_neema_wilson_airport/video/7464158414776634630?is_from_webapp=1&sender_device=pc&web_id=7433834963341248006" class="video-bg glightbox">
 						<span class="icon"><span class="icon-play"></span></span>
-						<img src="images/Pastor.jpg" style="height: 500; width: 400;"  alt="Image" class="img-fluid rounded">
+						<img src="images/PstClyde.jpg" style="height: 500; width: 400;"  alt="Image" class="img-fluid rounded">
 					</a>
 				</div>
 				<div class="col-lg-5 ms-auto" data-aos="fade-up" data-aos-delay="100">
