--- a/events.html
+++ b/events.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<meta name="Hacker Emmanuel" content="AIC-NEEMA">
-	<link rel="shortcut icon" href="images/aiclogo-removebg-preview.png">
+	<link rel="shortcut icon" href="images/Favicon.png">
 
 	<meta name="description" content="" />
 	<meta name="keywords" content="bootstrap, bootstrap5" />
@@ -42,7 +42,7 @@
 		<div class="container">
 			<div class="site-navigation">
 				<a href="index.html" class="logo m-0 float-left">
-					<img src="images/aiclogo-removebg-preview.png" alt="AIC-NEEMA" style="height: 70px;">
+					<img src="images/aiclogo-removebg-preview.png" alt="AIC-NEEMA" style="height: 50px;">
 				</a>
 
 				<ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu float-end">
@@ -56,18 +56,15 @@
 					<li class="cta-button"><a href="contact.html">Request a prayer</a></li>
 				</ul>
 
-				
-
 				<a href="#" class="burger ms-auto float-end site-menu-toggle js-menu-toggle d-inline-block d-lg-none light" data-toggle="collapse" data-target="#main-navbar">
 					<span></span>
 				</a>
-
 				
 			</div>
 		</div>
 	</nav>
 	
-	<div class="hero overlay" style="background-image: url('images/download.jpeg'); ">
+	<div class="hero overlay" style="background-image: url('images/background.jpg'); ">
 		<div class="container">
 			<div class="row align-items-center justify-content-between">
 				<div class="col-lg-5 me-auto text-start pe-lg-5">
@@ -76,16 +73,19 @@
 							<h1 data-aos="fade-left" class="hero-heading">Events</h1>
 						</div>
 						<div class="">
-							<p class="mb-5 opacity-5" data-aos="fade-left" data-aos-delay="200">Our church has a number of different engaging programs that appeal to various segments of the society. We have <b>men’s and youth retreats</b> where the objectives are spiritual growth, <i>nurturing fellowship, and meditation</i>. <b>Camps for the women </b>provide room for <i>glorifying God, education and self upliftment</i>. Additionally, we have <b>graduation ceremonies</b>, where we honor and reward achievements as well as encourage further development in God’s ways, on top of celebrating important milestones. Every one of these activities presents an opportunity to the members to relate, develop spiritually and foster friendship.</p>
+							<p class="mb-5" data-aos="fade-left" data-aos-delay="200">Our church offers engaging programs for all, 
+								including men's and youth retreats focused on spiritual growth and fellowship, women's camps for worship and empowerment, 
+								and graduation ceremonies to celebrate achievements and encourage continued growth in faith. These activities strengthen 
+								spiritual development and community bonds.</p>
 							<p data-aos="fade-left" data-aos-delay="300"><a href="sermons.html" class="btn btn-primary">Go to sermons</a></p>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-lg-7" data-aos="fade-left">
-					<a href="https://www.tiktok.com/@aic_neema_wilson_airport?_t=8qB1g3zTR0I&_r=1" class="video-bg glightbox">
+					<a href="https://youtu.be/SjXLlr-1GbQ?feature=shared" class="video-bg glightbox">
 						<span class="icon"><span class="icon-play"></span></span>
-						<img src="images/Jericho.jpg" style="height: 450px; width: 550px;" alt="Image" class="img-fluid rounded">
+						<img src="images/Event.jpg" style="height: 450px; width: 550px;" alt="Image" class="img-fluid rounded">
 					</a>
 				</div>
 			</div>
@@ -98,31 +98,31 @@
 			<div class="row g-5">
 				<div class="col-12 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="0">
 					<div class="sermon-entry">
-						<a href="#"><img src="images/Jericho.jpg" style="height: 300px; width: 350px;" alt="Image" class="img-fluid mb-3 rounded"></a>
+						<a href="#"><img src="images/Kesha.jpg" style="height: 280px; width: 400px;" alt="Image" class="img-fluid mb-3 rounded"></a>
 						<div class="sermon-body">
-							<span class="date">27 Oct 2024 <span class="mx-2">&bullet;</span> AIC Jericho </span>
-							<h3 class="mb-2"><a href="https://www.youtube.com/results?search_query=aic+neema+wilson+airport">Youth Worship Experience</a></h3>
-							<p class="mb-5">It was a nice moment for deep worships and prayers. We had fun as youth. Click the <b>Explore</b> button below and learn more about what happened</p>
-							<p><a href="https://www.youtube.com/results?search_query=aic+neema+wilson+airport" class="btn btn-primary btn-sm">Explore</a></p>
+							<span class="date">28 Mar 2025 <span class="mx-2">&bullet;</span> AIC Neema</span>
+							<h3 class="mb-2"><a href="https://www.youtube.com/results?search_query=aic+neema+wilson+airport">Monthly Kesha</a></h3>
+							<p class="mb-5">It was a nice moment for Praise,worships and prayers. We had fun as a church. Click the <b>Explore</b> button below and learn more about what happened</p>
+							<p><a href="https://youtube.com/shorts/oXhRAQxKjz0?feature=shared" class="btn btn-primary btn-sm">Explore</a></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-12 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
 					<div class="sermon-entry">
-						<a href="#"><img src="images/youthretreat.jpg" style="height: 200px; width: 400px;" alt="Image" class="img-fluid mb-3 rounded"></a>
+						<a href="#"><img src="images/CED.jpg" style="height: 280px; width: 400px;" alt="Image" class="img-fluid mb-3 rounded"></a>
 						<div class="sermon-body">
-							<span class="date">26 Oct 2024 <span class="mx-2">&bullet;</span> AIC SunValley </span>
-							<h3 class="mb-2"><a href="https://www.youtube.com/results?search_query=aic+neema+wilson+airport">CYA Retreat</a></h3>
-							<p class="mb-5">At SunValley we learnt a lot as CYA of AIC Neema. You cannot afford to miss out of what happened. Click the <b>Explore</b> button below for more</p>
-							<p><a href="https://www.youtube.com/results?search_query=aic+neema+wilson+airport" class="btn btn-primary btn-sm">Explore</a></p>
+							<span class="date">1 Sep 2024 <span class="mx-2">&bullet;</span> AIC Neema </span>
+							<h3 class="mb-2"><a href="https://www.youtube.com/results?search_query=aic+neema+wilson+airport">CED graduation</a></h3>
+							<p class="mb-5">We had our CED graduation on 1st September 2024. You cannot afford to miss out of what happened. Click the <b>Explore</b> button below for more</p>
+							<p><a href="https://youtu.be/SjXLlr-1GbQ?feature=shared" class="btn btn-primary btn-sm">Explore</a></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-12 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
 					<div class="sermon-entry">
-						<a href="#"><img src="images/men.jpg" style="height: 280px; width: 300px;" alt="Image" class="img-fluid mb-3 rounded"></a>
+						<a href="#"><img src="images/MenRetreat.jpg" style="height: 280px; width: 400px;" alt="Image" class="img-fluid mb-3 rounded"></a>
 						<div class="sermon-body">
-							<span class="date">10 Oct 2022 <span class="mx-2">&bullet;</span> AIC Neema Wilson Airport Men  </span>
+							<span class="date">10 Oct 2022 <span class="mx-2">&bullet;</span> AIC Neema </span>
 							<h3 class="mb-2"><a href="https://www.youtube.com/results?search_query=aic+neema+wilson+airport">Mens Retreat</a></h3>
 							<p class="mb-5">Learn how to become a father, bringing up your familiy well and taking care of you wife. Also, teachings like investments , insurance.. are being taught</p>
 							<p><a href="https://www.youtube.com/results?search_query=aic+neema+wilson+airport" class="btn btn-primary btn-sm">Explore</a></p>
