--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 				</div>
 				<div class="col-lg-8">
 					<span class="subheading d-block mb-4">Upcoming event</span>
-					<h2 class="text-black">Monthly Kesha, Friday 25th April</h2>
+					<h2 class="text-black">Church Kitty - Sunday 8th June 2025 </h2>
 					<p class="sermon-meta mb-4"><strong id="event-status">Countdown: Days from now</strong></p>
 	
 					<div class="row">
