--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="css/style.css">
 
-	<title>AIC Neema Wilson Airport</title>
+	<title>Aic Neema Wilson Airport</title>
 </head>
 <body >
 	<div class="site-mobile-menu site-navbar-target">
@@ -287,31 +287,32 @@
 			<div class="row justify-content-between">
 				<div class="col-lg-4" data-aos="fade-up">
 					<span class="subheading mb-4 d-block">About us</span>
-					<h2 class="mb-4 heading">AIC-NEEMA WILSON AIRPORT CHURCH</h2>
-					<p>Welcome to AIC Neema, located near Wilson Airport along Langata Road, Nairobi. We are close to the Carnivore Grounds, making it easy to find and visit. Join us for worship and fellowship!</p>
+					<p>VISION</p>
+					<p>MISSION</p>
 					<p class="mt-5"><a href="ministry.html" class="btn btn-primary">Know more about us</a></p>
 				</div>
 				<div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
 					<!-- <img src="images/landscape-1.jpg" alt="Image" class="img-fluid rounded"> -->
 					<div class="row">
 						<div class="col-6 col-sm-6 col-md-4 col-lg-4 mb-4">
-							<img src="images/trampets.jpg" style="height: 303; width: 304;" alt="Image" class="img-fluid rounded">
-						</div>
-						<div class="col-6 col-sm-6 col-md-4 col-lg-4 mb-4">
-							<img src="images/CYA2.jpg" style="height: 303; width: 304;" alt="Image" class="img-fluid rounded">
-						</div>
-						<div class="col-6 col-sm-6 col-md-4 col-lg-4 mb-4">
-							<img src="images/star.jpg" style="height: 303; width: 304;" alt="Image" class="img-fluid rounded">
-						</div>
-						<div class="col-6 col-sm-6 col-md-4 col-lg-4 mb-4">
-							<img src="images/Grad.jpg" style="height: 303; width: 304;" alt="Image" class="img-fluid rounded">
-						</div>
-						<div class="col-6 col-sm-6 col-md-4 col-lg-4 mb-4">
 							<img src="images/CMF.jpg" style="height: 303; width: 304;" alt="Image" class="img-fluid rounded">
+						</div>
+						<div class="col-6 col-sm-6 col-md-4 col-lg-4 mb-4">
+							<img src="images/CWF.jpg" style="height: 303; width: 304;" alt="Image" class="img-fluid rounded">
+						</div>
+						<div class="col-6 col-sm-6 col-md-4 col-lg-4 mb-4">
+							<img src="images/CYA.jpg" style="height: 303; width: 304;" alt="Image" class="img-fluid rounded">
 						</div>
 						<div class="col-6 col-sm-6 col-md-4 col-lg-4 mb-4">
 							<img src="images/Cadet.jpg" style="height: 303; width: 304;" alt="Image" class="img-fluid rounded">
 						</div>
+						<div class="col-6 col-sm-6 col-md-4 col-lg-4 mb-4">
+							<img src="images/Cadet2.jpg" style="height: 303; width: 304;" alt="Image" class="img-fluid rounded">
+						</div>
+						<div class="col-6 col-sm-6 col-md-4 col-lg-4 mb-4">
+							<img src="images/battalion.jpg" style="height: 303; width: 304;" alt="Image" class="img-fluid rounded">
+						</div>
+						<p>2025 THEME : </p>
 					</div>
 				</div>
 			</div>
@@ -327,13 +328,12 @@
 					<span class="subheading d-block mb-4 text-white">Why Us</span>
 					<h2 class="heading text-white">Keep Your Faith</h2>
 				</div>
-				
 			</div>
 			<div class="row align-items-center g-5">
 				<div class="col-lg-6" data-aos="fade-up">
-					<!-- <a href="https://www.youtube.com/watch?v=mwtbEGNABWU" class="video-bg glightbox"> -->
+					<a href="https://www.tiktok.com/@aic_neema_wilson_airport/video/7464158414776634630?is_from_webapp=1&sender_device=pc&web_id=7433834963341248006" class="video-bg glightbox">
 						<span class="icon"><span class="icon-play"></span></span>
-						<img src="images/clyde.jpg" style="height: 420px; width: 360px;" alt="Image" class="img-fluid rounded">
+						<img src="images/PstClyde.jpg" style="height: 700; width: 400;"  alt="Image" class="img-fluid rounded">
 					</a>
 				</div>
 				<div class="col-lg-5 ms-auto" data-aos="fade-up" data-aos-delay="100">
