--- a/index.html
+++ b/index.html
@@ -323,37 +323,40 @@
 
 	<div class="section bg-secondary">
 		<div class="container">
-			<div class="row ustify-content-between align-items-center">
+			<div class="row mb-100 justify-content-between align-items-center">
 				<div class="col-lg-5" data-aos="fade-up">
-					<span class="subheading d-block mb-4 text-white">Why Us</span>
-					<h2 class="heading text-white">Keep Your Faith</h2>
+					<span class="subheading d-block mb- ">Why Us ?</span>
+					<h2 class="heading text-white">God cares for you, and so do we.</h2>
+				</div>
+				<div class="col-lg-5 align-self-end opac-white-5" data-aos="fade-up" data-aos-delay="100">
+					<p>We at AIC Neema Wilson Airport Church stand on the basis of Biblical authority. We offer hope through the salvation of Jesus Christ. Community is very important to us, and we strive to offer a supportive environment where fellowship is reality. We are committed to serving our brothers through evangelism, sharing God's love beyond our walls...</p>
 				</div>
 			</div>
 			<div class="row align-items-center g-5">
-				<div class="col-lg-6" data-aos="fade-up">
+				<div class="col-lg-7" data-aos="fade-up">
 					<a href="https://www.tiktok.com/@aic_neema_wilson_airport/video/7464158414776634630?is_from_webapp=1&sender_device=pc&web_id=7433834963341248006" class="video-bg glightbox">
 						<span class="icon"><span class="icon-play"></span></span>
-						<img src="images/PstClyde.jpg" style="height: 700; width: 400;"  alt="Image" class="img-fluid rounded">
+						<img src="images/PstClyde.jpg" style="height: 500; width: 400;"  alt="Image" class="img-fluid rounded">
 					</a>
 				</div>
 				<div class="col-lg-5 ms-auto" data-aos="fade-up" data-aos-delay="100">
 					<div class="row g-4">
 						<div class="col-lg-6 feature-1">
-							<h3 class="text-white">Live by Faith</h3>
-							<p class="opac-white-5"><b>2 Corinthians 5:7</b> For we live by faith, not by sight. <b>Hebrews 11:6</b> And without faith it is impossible to please God, because anyone who comes to him must believe that he exists and that he rewards those who earnestly seek him. </p>
+							<h3 class="text-white">Biblical Authority</h3>
+							<p class="opac-white-5"><b>Romans 13:1:</b> “Let everyone be subject to the governing authorities, for there is no authority except that which God has established”. </p>
 						</div>
 						<div class="col-lg-6 feature-1">
-							<h3 class="text-white">Love one another</h3>
-							<p class="opac-white-5"><b>John 13:34-35</b>. “A new command I give you: Love one another. As I have loved you, so you must love one another. By this everyone will know that you are my disciples, if you love one another. </p>
+							<h3 class="text-white">Salvation through Christ</h3>
+							<p class="opac-white-5"><b>Romans 6:23</b> 'For the wages of sin is death, but the gift of God is eternal life in Christ Jesus our Lord. </p>
 						</div>
 
 						<div class="col-lg-6 feature-1">
-							<h3 class="text-white">Be courageous</h3>
-							<p class="opac-white-5"><b>Joshua 1:9</b> .Have not I commanded thee? Be strong and of a good courage; be not afraid, neither be thou dismayed: for the Lord thy God is with thee whithersoever thou goest </p>
+							<h3 class="text-white">Community and Fellowship</h3>
+							<p class="opac-white-5"><b>1 John 1:7</b> But if we walk in the light, as he is in the light, we have fellowship with one another, and the blood of Jesus, his Son, purifies us from all sin </p>
 						</div>
 						<div class="col-lg-6 feature-1">
-							<h3 class="text-white">Seal of God</h3>
-							<p class="opac-white-5">Jesus said, “Labour not for the meat which perisheth, but for that meat which endureth unto everlasting life, which the Son of man shall give unto you: for Him hath God the Father sealed.” <b>John 6:27</b> Therefore, it is only by being in Christ that you can be sealed. </p>
+							<h3 class="text-white">Mission and Evangelism</h3>
+							<p class="opac-white-5"><b>Psalm 96:3 </b> "Declare his glory among the nations, his marvelous works among all the peoples!" </p>
 						</div>
 
 					</div>
@@ -373,7 +376,6 @@
 				<div class="col-lg-7 mx-auto text-center" data-aos="fade-up">
 					<span class="subheading mb-4 d-block">Our Services</span>
 					<h2 class="mb-4 heading">Sunday Services</h2>
-
 				</div>
 			</div>
 
@@ -412,10 +414,10 @@
 		<div class="container">
 			<div class="row align-items-center" data-aos="fade-up">
 				<div class="col-lg-9 text-center text-md-start mb-4 mb-md-0">
-					<h2 class="heading text-white">Grow spiritually by tuning into our sermons.</h2>
+					<h2 class="heading text-white">Grow spiritually with our sermons.</h2>
 				</div>		
 				<div class="col-lg-3 text-center text-md-end" data-aos="fade-up" data-aos-delay="100">
-					<a href="sermons.html" class="btn btn-primary py-3 px-5">Join Us</a>
+					<a href="sermons.html" class="btn btn-primary py-3 px-5">Sermons</a>
 				</div>
 
 			</div>		
@@ -444,25 +446,18 @@
 						<ul class="list-unstyled float-start links">
 							<li><a href="index.html">About us</a></li>
 							<li><a href="Services.html">Services</a></li>
-							<li><a href="#">Vision</a></li>
-							<li><a href="#">Mission</a></li>
+							<li><a href="events.html">Events</a></li>
+							<li><a href="sermons.html">Sermons</a></li>
 						</ul>
 						<ul class="list-unstyled float-start links">
-							<li><a href="#">Partners</a></li>
-							<li><a href="#">FAQ</a></li>
-							<li><a href="#">Creative</a></li>
+							<li><a href="Give.html">Givings</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div> <!-- /.widget -->
 				</div> <!-- /.col-lg-4 -->
 				<div class="col-lg-4">
 					<div class="widget">
 						<h3>Links</h3>
-						<ul class="list-unstyled links">
-							<li><a href="#">Our Vision</a></li>
-							<li><a href="index.html">About us</a></li>
-							<li><a href="contact.html">Contact us</a></li>
-						</ul>
-
 						<ul class="list-unstyled social">
 							<li><a href="https://www.instagram.com/aic_wilson_airport/profilecard/?igsh=MWh6emZsNzhsaDdwbw=="><span class="icon-instagram"></span></a></li>
 							<li><a href="https://youtube.com/@aicneemawilsonairport?feature=shared"><span class="icon-youtube"></span></a></li>
