--- a/Services.html
+++ b/Services.html
@@ -24,7 +24,7 @@
 	<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="css/style.css">
 
-    <title>Services - Ministry Page</title>
+    <title>Services</title>
     <meta name="description" content="Explore our weekly and special service timings, including Sunday services, midweek services, and youth and choir activities.">
     <meta name="keywords" content="church services, Sunday worship, youth service, midweek fellowship, ministry activities">
     <link rel="stylesheet" href="style.css">
