--- a/ministry.html
+++ b/ministry.html
@@ -27,7 +27,7 @@
 	<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="css/style.css">
 
-	<title>AIC Neema Wilson Airpor</title>
+	<title>Ministries</title>
 </head>
 <body >
 	<div class="site-mobile-menu site-navbar-target">
