--- a/events.html
+++ b/events.html
@@ -25,7 +25,7 @@
 	<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="css/style.css">
 
-	<title>AIC-NEEMA &mdash;</title>
+	<title>Events</title>
 </head>
 <body >
 
