--- a/sermons.html
+++ b/sermons.html
@@ -26,7 +26,7 @@
 	<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="css/style.css">
 
-	<title>AIC-NEEMA &mdash; </title>
+	<title>Sermons</title>
 </head>
 <body >
 
