--- a/index.html
+++ b/index.html
@@ -185,17 +185,17 @@
 		<div class="container">
 			<div class="row justify-content-between counter-wrap" id="clockdiv">
 				<div class="col-lg-4 mb-4 mb-lg-0">
-					<img src="images/P&W.jpg" style="height: 350px; width: 400px;" alt="Image" class="img-fluid rounded">
+					<img src="images/family.jpg" style="height: 350px; width: 450px;" alt="Image" class="img-fluid rounded">
 				</div>
 				<div class="col-lg-8">
 					<span class="subheading d-block mb-4">Upcoming event</span>
-					<h2 class="text-black">Church Kitty - Sunday 8th June 2025 </h2>
+					<h2 class="text-black">Family Sunday - Sunday 14th September 2025 </h2>
 					<p class="sermon-meta mb-4"><strong id="event-status">Countdown: Days from now</strong></p>
 	
 					<div class="row">
 						<div class="col-6 col-sm-6 col-md-6 col-lg-3 text-left">
 							<div class="counter">
-								<span class="number d-block" id="days">9</span>
+								<span class="number d-block" id="days">0</span>
 								<span class="caption">Days</span>
 							</div>
 						</div>
