--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 						<div class="col-6 col-sm-6 col-md-4 col-lg-4 mb-4">
 							<img src="images/battalion.jpg" style="height: 303; width: 304;" alt="Image" class="img-fluid rounded">
 						</div>
-						<p>2025 THEME : </p>
+						<p>2025 THEME : Enock walked with the Lord</p>
 					</div>
 				</div>
 			</div>
